--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "jwt-decode": "^3.1.2",
     "knex": "^2.5.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +52,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
